--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <h1 class="neon" data-text="Bomberman">Bomberman</h1>
    
   </div>
-
-  /* Toggle Dark Mode */
+  
+<!-- Toggle Dark Mode  -->
   
   <svg style="display: none;">
     <symbol viewBox="0 0 24 24" id="moon">
@@ -68,7 +68,7 @@
         </button>
       </header>
 
-    /* Grid Blocks */
+   <!-- Grid Box  -->
 
     <h1 id="text"></h1>
     <div class="wrapper">
